--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Black Cart</title>
+  <!-- <link rel="icon" type="image/x-icon" href="/src/logo/blackcart.ico"> -->
   <style>
     * {
       margin: 0;
