--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,30 @@
       margin: 0;
       font-family: 'Urbanist', sans-serif;
     }
+
+    html {
+      --scrollbarBG: #3f3f3f;
+      --thumbBG: #ffc303;
+    }
+
+    body::-webkit-scrollbar {
+      width: 12px;
+    }
+
+    body {
+      scrollbar-width: thin;
+      scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+    }
+
+    body::-webkit-scrollbar-track {
+      background: var(--scrollbarBG);
+    }
+
+    body::-webkit-scrollbar-thumb {
+      background-color: var(--thumbBG);
+      border-radius: 5px;
+      border: 2px solid var(--scrollbarBG);
+    }
   </style>
 </head>
 
